[project]
name = "debugging-q4"
version = "0.1.0"
description = "CCHC Assessment Debugging Q4"
authors = [{ name = "Mohamed Chikani", email = "moh.kareem15@hotmail.com" }]
readme = "README.md"
requires-python = "<=3.11"
dependencies = [  
  "dash",
  "pandas",
  "numpy"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]