[project]
name = "debugging-q4"
version = "0.1.0"
description = "CCHC Assessment Debugging Q4"
authors = [{ name = "Mohamed Chikani", email = "moh.kareem15@hotmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "dash==2.15.0",
  "pandas==1.5.3",
  "numpy==1.24.4",
  "plotly==5.22.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]